fixed scrollbar size occupancy issues

--- a/src/components/EditingCanvas/index.scss
+++ b/src/components/EditingCanvas/index.scss
@@ -3,4 +3,5 @@
 .editing-canvas {
   flex: 1;
   background-color: black;
+  min-width: 0px;
 }
